--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/csg": "^3.3.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/eslint-plugin": "^0.1.2",
     "@react-three/fiber": "^8.17.14",
